--- a/Atividade01_Carrinho/index.html
+++ b/Atividade01_Carrinho/index.html
@@ -18,6 +18,11 @@
     <ul id="lista-produtos"></ul>
     <hr>
     <h1>Produtos</h1>
+    <div id="carrinho-select">
+        <select id="select-produtos">
+            <option>Camiseta - Quantidade: 2 - Valor</option>
+        </select>
+    </div>
     <div id="produtos">
         
     </div>
