--- a/Atividade02_Lista-Filmes/index.html
+++ b/Atividade02_Lista-Filmes/index.html
@@ -19,6 +19,9 @@
     </div>
     <ul id="listaFilmes"></ul>
 </div>
+
+<a href="../Atividade01_Carrinho/index.html">Atividade 01</a>
+
 <script src="script.js"></script>
 </body>
 </html>
