--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
     <div id="produtos">
         
     </div>
-    <a href="../Atividade02_Lista-Filmes/index.html">Atividade 02</a>
-    <script src="script.js"></script>
+    <a href="Atividade02_Lista-Filmes/index.html">Atividade 02</a>
+    <script src="Atividade01_Carrinho/script.js"></script>
 </body>
 
 </html>
